--- a/Aufgabe3/style.css
+++ b/Aufgabe3/style.css
@@ -67,7 +67,7 @@
   .image-container img {
     width: 100px; 
     height: auto; /
-    margin: 0 10px; 
+    margin: 10px; 
     vertical-align: middle; 
   }
   
