--- a/Aufgabe3/style.css
+++ b/Aufgabe3/style.css
@@ -3,7 +3,7 @@
   }
   
   body {
-    background-color: #afafaf; 
+    background-color: #7c7b7b; 
   }
 
   .row::after {
@@ -22,7 +22,7 @@
   }
   
   .header {
-    background-color: #339ccc;
+    background-color: rgb(10, 24, 209);
     color: #ffffff;
     padding: 15px;
   }
@@ -36,7 +36,7 @@
   .menu li {
     padding: 8px;
     margin-bottom: 7px;
-    background-color: #3d3d3d;
+    background-color: rgba(255, 0, 0, 0.843);
     color: #ffffff;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
@@ -46,7 +46,7 @@
   }
   
   .aside {
-    background-color: #3d3d3d;
+    background-color: #ff0000;
     padding: 15px;
     color: #ffffff;
     text-align: center;
@@ -59,13 +59,13 @@
     left: 0;
     bottom: 50px; 
     width: 100%;
-    text-align: center; 
+    text-align: center;
     padding: 10px 0; 
-}
+  }
   
   
   .image-container img {
-    width: 100px; 
+    width: 400px; 
     height: auto; 
     margin: 0 10px; 
     vertical-align: middle; 
@@ -84,13 +84,12 @@
     width: 100%; 
   }
   
-  
-  [class*="col-"] {
+    [class*="col-"] {
     width: 100%;
   }
   
   @media only screen and (min-width: 600px) {
-    
+  
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
     .col-s-3 {width: 25%;}
@@ -106,7 +105,7 @@
   }
   
   @media only screen and (min-width: 768px) {
-   
+    
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
     .col-3 {width: 25%;}
